--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,7 @@
 {
     "files.associations": {
+        "fcntl.h": "c",
         "stat.h": "c",
-        "user.h": "c",
-        "types.h": "c",
-        "fcntl.h": "c"
+        "user.h": "c"
     }
 }
