--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
     "files.associations": {
         "sysinfo.h": "c",
-        "spinlock.h": "c"
+        "spinlock.h": "c",
+        "proc.h": "c",
+        "defs.h": "c",
+        "DEFS.H": "cpp"
     }
 }
